manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  namespace: it-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service
          image: devacr301225.azurecr.io/ui-service:v5
          ports:
            - containerPort: 80
