manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: it-ui
spec:
  selector:
    app: ui-service
  ports:
    - port: 80
      targetPort: 80
